--- a/styles.css
+++ b/styles.css
@@ -228,17 +228,18 @@ h2 {
         flex-direction: column;
     }
 }
-    .project .video-container {
-        position: relative;
-        border-radius: 12px;
-        overflow: hidden;
-        background: #000
-    }
+.project .video-container {
+    position: relative;
+    border-radius: 12px;
+    overflow: hidden;
+    background: #0000;
+    aspect-ratio: 16 / 9;
+    width: 100%;
+}
 
     .project video, .project img.thumb {
         width: 100%;
         height: 100%;
-        max-height: 340px;
         object-fit: cover;
         display: block
     }
