--- a/styles.css
+++ b/styles.css
@@ -388,7 +388,8 @@ h2 {
 .grid {
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(260px,1fr));
-    gap: var(--gap)
+    gap: var(--gap);
+    padding-top: 20px;
 }
 
 .muted {
