--- a/styles.css
+++ b/styles.css
@@ -636,9 +636,13 @@ h2 {
   overflow: hidden;
 }
 
-.hero-slide[data-pos="current"]{
-  transform: translate3d(0,0,0) scale(1);
-  z-index: 4; opacity: 1; filter: none; pointer-events: auto;
+.hero-slide[data-pos="current"] {
+    transform: translate3d(0,0,0) scale(1);
+    z-index: 4;
+    opacity: 1;
+    filter: none;
+    pointer-events: auto;
+    background-image: url("/assets/Banner_Galaxia.png");
 }
 
 .hero-slide[data-pos="next"]{
