--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,6 @@ h1 {
     height: 100%;
     border-radius: 28px;
     overflow: hidden;
-    padding: 28px;
     box-shadow: 0 18px 40px rgba(0,0,0,.35);
     position: relative
 }
@@ -198,7 +197,7 @@ h1 {
 
 .hero-slide[data-pos="current"] .hero-card {
     background: url('assets/Banner_Galaxia.png') center no-repeat;
-    background-size: contain;
+    background-size: cover;
 }
 .hero-slide[data-pos="next"] .hero-card {
     background: #7c6bc4
