--- a/styles.css
+++ b/styles.css
@@ -119,9 +119,10 @@ h1 {
         .hero-carousel .hero-track::before {
             content: "";
             position: absolute;
-            inset: 18px -28px -18px -28px;
+            inset: 18px -550px -18px -28px;
             border-radius: 28px;
             background: url('assets/FondoTarjetas.png') center no-repeat;
+            background-size: contain;
             box-shadow: 0 16px 30px rgba(0,0,0,.25);
             z-index: 0;
         }
