--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ h1 {
 }
 
 .hero {
-    padding: 28px 0 0;
+    padding: 60px 0px 100px 0px;
     position: relative
 }
 
@@ -120,11 +120,13 @@ h1 {
         .hero-carousel .hero-track::before {
             content: "";
             position: absolute;
-            inset: 18px -550px -18px -28px;
+            width: 1600px;
+            height: 700px;
+            inset: -100px 0px 0px 0px;
             border-radius: 28px;
-            background: url('assets/FondoTarjetas.png') center no-repeat;
+            background: url(assets/FondoTarjetas.png) center no-repeat;
             background-size: contain;
-            box-shadow: 0 16px 30px rgba(0,0,0,.25);
+            box-shadow: 0 16px 30px rgba(0, 0, 0, .25);
             z-index: 0;
         }
 
