--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,6 @@ a {
     width: 150px;
     border-radius: 5px;
     padding: 8px;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, .25);
     inset: -230px 20px 20px 90px;
 }
 
@@ -150,14 +149,15 @@ h1 {
 }
 
 .hero-h1 {
-    font-size: clamp(28px,4.6vw,44px);
+    font-size: 40px;
     line-height: 1.13;
-    margin: 0 0 18px;
-    text-shadow: 0 2px 2px rgba(0,0,0,.3)
+    margin: 50px 50px 50px 50px;
+    text-shadow: 0 2px 2px rgba(0, 0, 0, .3);
 }
 
 .hero-cta {
     display: inline-block;
+    margin-left: 50px;
     margin-top: 12px;
     padding: 10px 18px;
     border-radius: 999px;
