--- a/styles.css
+++ b/styles.css
@@ -104,13 +104,16 @@ h1 {
     position: relative;
     overflow: visible;
     z-index: 1;
+    width: 45%;
+    left: 31%;
+    top: -20px;
+    height: 315px;
 }
 
     .hero-carousel .hero-track {
         position: relative;
-        width: min(100%,750px);
-        height: clamp(260px,36vw,420px);
-        margin: 14px auto 0;
+        width: 100%;
+        height: 100%;
         --peek: 14%;
         --gap: 10%;
     }
@@ -219,7 +222,7 @@ h1 {
     position: absolute;
     left: 0;
     right: 0;
-    bottom: -10px;
+    bottom: -20px;
     display: flex;
     gap: 8px;
     justify-content: center;
@@ -230,24 +233,23 @@ h1 {
     width: 8px;
     height: 8px;
     border-radius: 999px;
-    background: rgba(255,255,255,.45);
+    background: #b1bdfe;
     border: none
 }
 
     .hero-dot.active {
-        background: #fff;
+        background: #111d5c;
         transform: scale(1.2)
     }
 
 .hero-bg {
     position: absolute;
-    top: -150px;
-    left: 50%;
-    transform: translateX(-50%); /* centra respecto al viewport */
-    width: min(1400px, 100vw); /* más ancho que el container si quieres “alas” */
+    top: -100px;
+    left: 30%;
+    width: 100%;
     height: 700px;
     background: url(/assets/FondoTarjetas.png) center no-repeat;
-    background-size: contain; /* o 'cover' si quieres que rellene */
+    background-size: contain;
     z-index: 0;
     pointer-events: none;
 }
