--- a/styles.css
+++ b/styles.css
@@ -46,17 +46,17 @@ a {
 }
 
 .nav-wrap {
-    position: absolute;
-    inset: -360px 0px 0px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 16px;
+    padding: 12px 0
 }
 
 .brand-logo {
     height: 370px;
     position: absolute;
-    width: 150px;
-    border-radius: 5px;
-    padding: 8px;
-    inset: -230px 20px 20px 90px;
+    inset: -360px 0px 0px 0px;
 }
 
 .nav {
